--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,9 @@
 */
 
 body {
-  background: var(--background);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #ffffff 100%), url("bg.jpg");
+  background-size: 100% 100vh;
+  background-color: rgba(0, 0, 0, 0,5);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   width: 800px;
