--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,10 @@
 */
 
 body {
-  /*background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, #e0e0e0 80%), url("bg.jpg");*/
+  background-color: #e0e0e0;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, #e0e0e0 80%), url("bg.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
   background-size: 100% 100vh;
   background-color: rgba(0, 0, 0, 0,5);
   color: var(--foreground);
